+  - new
-  - deleted
*  - modified
#  - fixed

v.0.9.4.....
=================
# - Not English characters in the file names are now supported.
+ - The hyperlink ho the PocketDjVu homepage was added to About dialog box.
+ - Bookmark dialog (in progress)...
+ - Significantly reduced the amount of needed RAM for loading and drawing of page images.
+ - Virtual Memory (VM) manager was created and used (in progress)...
+ - new toolbar icons (in progress)...

v.0.9.3
=================
# - the checking was added: does file from "recent used files" list exist still.
    If no it's removed from list.
+ - "Scroll by tap zones" command was added. 
    There are 4 tap zones for scrolling and 1 central zone which works as usually(for context menu, etc.).
+ - "Move by stylus" command was added. The double click ends this mode.
* - some menu commands and buttons are disabled without opened file.
+ - double click toggle fullscreen mode.
# - during the up scrolling the page placement was corrected for pages which have different size.

v.0.9.2
=================
# the filling of "Recent files" menu was broken in the 0.9.1 version.
* the binaries was rebuilt with WTL 8.0.6356

v.0.9.1
=================
+ this file added.
+ the command "Fullscreen" was added to menu.
* not implemented menu commands were grayed.

v.0.9
=================
+ The project was added to Google Code site.